# anybdd

./: .env.exemple  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile.diesel  README.md  compose.yml  diesel.toml
migrations/2024-08-06-224231_create_users/: down.sql  up.sql
migrations/2024-08-06-232945_create_projects/: down.sql  up.sql
migrations/2024-08-07-103410_create_tasks/: down.sql  up.sql
migrations/2024-08-07-110727_create_tags/: down.sql  up.sql
src/: connection.rs  lib.rs  main.rs  models.rs  project.rs  schema.rs  tag.rs  task.rs  user.rs
src/models/: mod.rs  project.rs  project_task.rs  tag.rs  task.rs  task_tag.rs  user.rs  user_github.rs  user_gitlab.rs  user_project.rs  user_task.rs
src/project/: create.rs  delete.rs  get.rs  mod.rs  patch.rs  post.rs  read.rs
src/tag/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  update.rs
src/task/: delete.rs  get.rs  list.rs  mod.rs  patch.rs  post.rs  read.rs
src/tests/: connection.rs  mod.rs
src/tests/user/: create.rs  delete.rs  list.rs
src/user/: check.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  patch.rs  post.rs  read.rs  update.rs
src/user_project/: delete.rs  get.rs  mod.rs  post.rs
