[package]
name = "anybdd"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.5"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = ["mysql","chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
mysqlclient-sys = "0.4.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_derive = "1.0.206"
serde_json = "1.0.124"
